package Models.Addons;

import javafx.scene.canvas.GraphicsContext;

public interface Addon {
    void draw(GraphicsContext gr);
}