package Models.Effects;

public enum EffectEnum {
    NONE,       // Без эффекта
    DROP_SHADOW,// Внешняя тень
    BLUR,       // Размытие
    INNER_SHADOW// Внутренняя тень
}